page five added but not aligned correctly yet

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -92,8 +92,6 @@ li a {
     text-decoration: underline;
 }
 
-
-
 /*Second page style*/
 .second-page {
     display: flex;
@@ -176,7 +174,6 @@ li a {
     color: #ffffff;
 }
 
-
 /*Third page style*/
 .third-page {
     height: 50vh;
@@ -256,7 +253,6 @@ li a {
     position: relative;
     background-image: url(../images/sunset-img.png);
     margin: 0;
-   
 }
 
 .text-content-right {
@@ -266,4 +262,57 @@ li a {
     padding: 20px;
     position: absolute;
     right: 10%;
+}
+
+/*Fifth page style*/
+.fifth-page {
+    height: 70vh;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    background-image: url(../images/backpacker-img.png);
+    margin: 0;
+}
+
+.text-content-center {
+    max-width: 40%;
+    background-color: #333333;
+    padding: 20px;
+    position: absolute;
+}
+.text-content-center img{
+    padding: 0;
+}
+
+.myname {
+    color: #ffffff;
+    font-size: 20px;
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0;
+    text-transform: uppercase;
+}
+
+.feedback {
+    font-size: 36px;
+    line-height: 26px;
+    letter-spacing: 0px;
+    color: #ffffff;
+    text-transform: uppercase;
+    font-family: "Aleo", serif;
+    font-weight: 400;
+}
+
+.feedback-txt {
+    font-size: 16px;
+    line-height: 26px;
+    letter-spacing: 0px;
+    color: #ffffff;
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: 400;
 }
